spacing issues in safari mobile

--- a/src/components/ProductSection/ProductSection.css
+++ b/src/components/ProductSection/ProductSection.css
@@ -158,7 +158,7 @@ section.container .foot.filter-area {
   section.container .top.filter-grid {
     width: 90vw;
     display: grid;
-    grid-template-rows: 52px 1fr;
+    grid-template-rows: 52px 54px;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 4px;
     row-gap: 4px;
